media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
      release: radarr
  template:
    metadata:
      labels:
        app: radarr
        release: radarr
    spec:
      volumes:
        - name: radarr
          persistentVolumeClaim:
            claimName: radarr
        - name: media
          persistentVolumeClaim:
            claimName: media
      containers:
        - name: radarr
          image: radarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: radarr
              subPath: configs/radarr
            - mountPath: /downloads/transmission
              name: media
              subPath: downloads/transmission
            - mountPath: /movies
              name: media
              subPath: movies
