media/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - radarr.ts.kyledev.co
    - "radarr.int.kyledev.co"
  rules:
    - backendRefs:
        - name: radarr
          port: 80
