media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: radarr
  namespace: media
spec:
  rules:
    - host: radarr.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr.int.kyledev.co
      secretName: radarr-kyledev-tls-prod
